refactor: update thread ID usage and singleton pattern
- Replace deprecated Thread.getId() with threadId() in TimerNinjaBlock and TimerNinjaContextManager to align with newer Java versions.
- Refactor TimerNinjaConfiguration to use the Initialization-on-Demand Holder Idiom, ensuring thread-safe lazy loading of the singleton instance without explicit synchronization.